--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -8,5 +8,4 @@ container_commands:
     leader_only: true
 
   03_collectstatic:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --
-    noinput"
+    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
